# curio

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  docker-bake.hcl  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: branch.md  commit.md  docs.md  pr.md  release.md  verify.md
.claude/hooks/: guard-git.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  e2e.yml
docs/adr/: 0001-phase-1-auth-and-ingest.md  0002-phase-2-async-hardening.md  0003-phase-3-enrichment.md  0004-phase-5-vectors.md  0005-phase-7-ci.md  0006-mcp-server.md  0007-phase-9-browser-ui.md
mcp_server/: auth.py  server.py  service.py
mcp_server/tests/: test_auth.py  test_service.py
scripts/: e2e_smoke.py
src/: conftest.py  manage.py
src/accounts/: api.py  schemas.py
src/accounts/tests/: test_api.py
src/curio/: api.py  asgi.py  celery.py  config.py  settings.py  urls.py  wsgi.py
src/curio/enrichment/: embeddings.py  schemas.py  service.py
src/curio/enrichment/tests/: test_embeddings.py  test_service.py
src/ui/: urls.py  views.py
src/ui/static/ui/css/: app.css
src/ui/templates/ui/: article_detail.html  article_list.html  base.html  login.html
src/ui/templates/ui/partials/: _article_add_error.html  _article_add_success.html  _article_list.html  _article_row.html  _status_badge.html  _tag_pill.html
src/ui/tests/: test_views.py
