[project]
name = "curio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django==5.2.*",
    "django-ninja>=1.6.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]
