[project]
name = "curio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref>=3.11.1",
    "celery>=5.6.3",
    "django==5.2.*",
    "django-ninja>=1.6.2",
    "django-ninja-jwt>=5.4.4",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.7",
    "factory-boy>=3.3.3",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]

[tool.mypy]
mypy_path = "src"
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "curio.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "curio.settings"
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/tests/*", "src/manage.py"]
